@@ -1,1 +1,12 @@
 # CSE 110 Project Team 30
+First we will clone the file 
+git clone https://github.com/ucsd-cse110-fa23/cse-110-project-team-30.git
+
+Then we download JavaFX
+
+Afterwards we will open the folder in VScode and go to run and debug then create a launch.json file
+
+Inside the Launch.jsonfile we will copy "vmArgs": "--module-path 'C:/Users/Chris Wu/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib' --add-modules javafx.controls,javafx.fxml"
+replacing 'C:/Users/Chris Wu/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib' with the path you downloaded JavaFx
+
+Now we will go to run and debug in vscode and run MyServer to start the server and then RecipeList to start the app
